# Franka-robot-via-MetaQuest3-Controller

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/flexiv/: flexiv_Rizon4s.xml  flexiv_Rizon4s_kinematics.urdf  scene.xml
assets/galaxea/: README.md
assets/inspire_hand/: inspire_hand_left.urdf  inspire_hand_right.urdf
assets/shadow_hand/: README.md  shadow_hand_right.urdf
assets/universal_robots_ur5e/: dual_ur5e.urdf  dual_ur5e.xml  scene.xml  scene_dual_arm.xml  ur5e.xml
robot_client/src/: franka_pose_cmd_client.cpp  franka_vr_control_client copy.cpp  franka_vr_control_client.cpp  franka_vr_control_data_sender_client.cpp  weighted_ik.cpp
scripts/collect_data/: cameras.py  data_recorder.py  game_controller.py  readfile.py  replay_episodes.py  run_collection.py
scripts/hardware/: teleop_arx_hardware.py  teleop_dual_arx_r5_hardware.py  teleop_dual_ur5e_hardware.py  teleop_eco63b_hardware.py  teleop_franka_hardware.py  teleop_r1lite_hardware.py  teleop_rml63b_hardware.py
scripts/misc/: test_data_log_analysis.py
scripts/simulation/: teleop_dual_a1x_mujoco.py  teleop_dual_ur5e_mujoco.py  teleop_eco63_mujoco.py  teleop_eco63_placo.py  teleop_flexiv_rizon4s_mujoco.py  teleop_flexiv_rizon4s_placo.py  teleop_inspire_hand_placo.py  teleop_rml63_mujoco.py  teleop_rml63_placo.py  teleop_shadow_hand_mujoco.py  teleop_shadow_hand_placo.py  teleop_unitree_g1_placo.py  teleop_x7s_placo.py
scripts/visualization/: rs_cam_streaming.py  vis_mjcf.py  vis_urdf.py
xrobotoolkit_teleop/camera/: camera.py  realsense_device_manager.py  test.py
(+86 files in other folders)
